@@ -1,3 +1,9 @@
+2013-10-23  Edward Smith-Rowland  <3dw4rd@verizon.net>
+
+	Implement C++14 [[deprecated]] modulo [[gnu::deprecated]] bugs.
+	* g++.dg/cpp1y/attr-deprecated.C: New.
+	* g++.dg/cpp1y/attr-deprecated-neg.C: New.
+
 2013-10-23  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/58793
