@@ -1,3 +1,9 @@
+2013-10-23  Edward Smith-Rowland  <3dw4rd@verizon.net>
+
+	Implement C++14 [[deprecated]] modulo [[gnu::deprecated]] bugs.
+	* parser.c (cp_parser_std_attribute): Interpret [[deprecated]]
+	as [[gnu::deprecated]].
+
 2013-10-22  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/58816
